# ob-ik-opensim-plugin

./: CMakeLists.txt  README.md  contributors.txt  extendedIK.cpp  oSensorsPlacer.cpp  offlineOrientationSensorsIK.cpp  testModelIO.cpp  testOSensorPlacer.cpp  testOSensorsIK.cpp
cmake/: FindOpenSim.cmake  IKExtendedConfig.cmake.in  cmake_uninstall.cmake.in
include/OpenSim/Common/: OrientationSensorData.h  OrientationSensorFrame.h
include/OpenSim/Simulation/: InverseKinematicsExtendedSolver.h  OrientationSensor.h  OrientationSensorsReference.h  RegisterTypes_osimExtendedIK.h  osimExtendedIKDLL.h
include/OpenSim/Simulation/Model/: OrientationSensor.h  OrientationSensorSet.h
include/OpenSim/Tools/: IKExtendedTaskSet.h  IKOrientationSensorTask.h  InverseKinematicsExtendedTool.h  OrientationSensorPlacer.h  OrientationSensorsPlacerTool.h  ScaleExtendedTool.h
src/: IKOrientationSensorTask.cpp  InverseKinematicsExtendedSolver.cpp  InverseKinematicsExtendedTool.cpp  OrientationSensor.cpp  OrientationSensorData.cpp  OrientationSensorFrame.cpp  OrientationSensorPlacer.cpp  OrientationSensorSet.cpp  OrientationSensorsPlacerTool.cpp  OrientationSensorsReference.cpp  RegisterTypes_osimExtendedIK.cpp  ScaleExtendedTool.cpp
test_data/in_data/inputs/encoders/: static.mot
test_data/in_data/inputs/imus/: static.mot  tr_100.mot
test_data/in_data/models/: ur10.osim  ur10_scaled_wOS.osim
test_data/in_data/outputs/: ob-ik_out_tr_100.mot  ob-ik_out_tr_50.mot  scaling_static.mot
test_data/in_data/setups/: ob-ik_tr_100.xml  ob-ik_tr_50.xml  scaling.xml
test_data/out_data/experimental/: trial01.csv  trial06.csv
test_data/out_data/simulated/: trial01.csv  trial06.csv
